--- a/modelViewController/Views/Catalogo/Create.cshtml
+++ b/modelViewController/Views/Catalogo/Create.cshtml
@@ -33,9 +33,9 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="imagen" class="control-label"></label>
-                <input asp-for="imagen" class="form-control" />
-                <span asp-validation-for="imagen" class="text-danger"></span>
+                <label asp-for="Image" class="control-label"></label>
+                <input asp-for="Image" class="form-control" />
+                <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
